// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Llama2ChatApi: $prompt 1`] = `
{
  "prompt": "<s>[INST] mock-prompt [/INST]",
}
`;

exports[`Llama2ChatApi: $prompt, examplePairs 1`] = `
{
  "prompt": "<s>[INST] mock-user-msg-1 [/INST] mock-assistant-msg-1 </s><s>[INST] mock-user-msg-2 [/INST] mock-assistant-msg-2 </s><s>[INST] mock-prompt [/INST]",
}
`;

exports[`Llama2ChatApi: $prompt, examplePairs, system 1`] = `
{
  "prompt": "<s>[INST] <<SYS>>
mock-system-text
<</SYS>>

mock-user-msg-1 [/INST] mock-assistant-msg-1 </s><s>[INST] mock-prompt [/INST]",
}
`;

exports[`Llama2ChatApi: $prompt, system 1`] = `
{
  "prompt": "<s>[INST] <<SYS>>
mock-system-text
<</SYS>>

mock-prompt [/INST]",
}
`;

exports[`Llama2ChatApi: all options 1`] = `
{
  "max_gen_len": 1500,
  "prompt": "<s>[INST] <<SYS>>
mock-system-text
<</SYS>>

mock-user-msg-1 [/INST] mock-assistant-msg-1 </s><s>[INST] mock-user-msg-2 [/INST] mock-assistant-msg-2 </s><s>[INST] mock-user-msg-3 [/INST] mock-assistant-msg-3 </s><s>[INST] mock-prompt [/INST]",
  "temperature": 0.7,
  "top_p": 0.9,
}
`;
